--- a/.github/workflows/use-secrets.yml
+++ b/.github/workflows/use-secrets.yml
@@ -14,4 +14,4 @@ jobs:
         uses: ./.github/actions/check-secrets-action
         with:
           secrets-context: ${{ toJSON(secrets) }}
-          your-secret: ${{ secrets-context.LATEST_PAT }} 
+          your-secret: ${{ secrets.LATEST_PAT }} 
