--- a/.github/workflows/use-secrets.yml
+++ b/.github/workflows/use-secrets.yml
@@ -14,4 +14,9 @@ jobs:
         uses: ./.github/actions/check-secrets-action
         with:
           secrets-context: ${{ toJSON(secrets) }}
-          your-secret: ${{ secrets.LATEST_PAT }} 
+          inputs:
+            your-secret:
+              description: 'yooo'
+              required: true
+            env:
+              your-secret: '${{secrets.LATEST_PAT}}'
