--- a/.github/workflows/use-secrets.yml
+++ b/.github/workflows/use-secrets.yml
@@ -12,11 +12,8 @@ jobs:
       - name: Grade use-secrets activity
         id: check-secrets
         uses: ./.github/actions/check-secrets-action
+        env:
+          your-secret: '${{ secrets-context.LATEST_PAT }}'
         with:
           secrets-context: ${{ toJSON(secrets) }}
-          inputs:
-            your-secret:
-              description: 'yooo'
-              required: true
-            env:
-              your-secret: '${{secrets.LATEST_PAT}}'
+
