--- a/.github/workflows/use-secrets.yml
+++ b/.github/workflows/use-secrets.yml
@@ -14,5 +14,6 @@ jobs:
         uses: ./.github/actions/check-secrets-action
         with:
           secrets-context: ${{ toJSON(secrets) }}
-          your-secret: '${{ secrets.LATEST_PAT }}'
+        env:
+          your-secret: ${{ secrets-context.LATEST_PAT }}
 
