--- a/.github/workflows/use-secrets.yml
+++ b/.github/workflows/use-secrets.yml
@@ -15,5 +15,5 @@ jobs:
         with:
           secrets-context: ${{ toJSON(secrets) }}
         env:
-          your-secret: ${{ secrets-context.LATEST_PAT }}
+          your-secret: ${{ secrets.LATEST_PAT }}
 
